// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductRating matches snapshot on both active and disabled states 1`] = `
<ProductRating
  ProductStore={ProductStore {}}
  inputIdIndex="100"
/>
`;

exports[`ProductRating matches snapshot on both active and disabled states 2`] = `
<ProductRating
  ProductStore={ProductStore {}}
  inputIdIndex="1"
  scoreValue={4}
/>
`;
